--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-echarts",
-  "version": "1.1.4",
+  "name": "@wayejs/node-echarts",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/ava"
+    "test": "./node_modules/.bin/ava index.test.js"
   },
   "ava": {
     "require": [
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/suxiaoxin/node-echarts#readme",
   "dependencies": {
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "echarts": "^4.0.3"
+    "ava": "2.x",
+    "canvas": "^2.6.1",
+    "echarts": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.32",
-    "@babel/register": "^7.0.0-beta.32",
-    "ava": "^0.23.0"
+    "@babel/register": "^7.0.0-beta.32"
   }
 }
